Feat: swap Exact Amount Out, SQS Routing and API changes
