# docs/swagger.json
@@ -94,15 +94,25 @@
                         "type": "string",
                         "description": "String representation of the sdk.Coin for the token in.",
                         "name": "tokenIn",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "String representing the denom of the token out.",
                         "name": "tokenOutDenom",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "String representing the denom of the token in.",
+                        "name": "tokenInDenom",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "String representation of the sdk.Coin for the token out.",
+                        "name": "tokenOut",
+                        "in": "query"
                     },
                     {
                         "type": "boolean",
@@ -285,10 +295,6 @@
             "properties": {
                 "coingeckoId": {
                     "type": "string"
-                },
-                "is_unlisted": {
-                    "description": "IsUnlisted is true if the token is unlisted.",
-                    "type": "boolean"
                 },
                 "decimals": {
                     "description": "Precision is the precision of the token.",
